--- a/timeCoffee.html
+++ b/timeCoffee.html
@@ -15,7 +15,7 @@
       <!-- menu -->
       <div id="container">
             <ul>
-                  <li><a href="coffee.html">Home</a></li>
+                  <li><a href="coffee.html">Home Page</a></li>
                   <li><a href="favorite.html">Favorite</a></li>
                   <li><a href="timeCoffee.html">Coffee Time</a></li>
             </ul>
